# The-Conversion-Engine

./: .env.example  .gitignore  README.md  explainer.md  pyproject.toml
.github/workflows/: ci.yml
conversion-engine-backend/: main.py
conversion_engine_backend/: failure_attribution.py  main.py  trace_schema.py  trace_writer.py
enrichment/: __init__.py  core.py  crunchbase.py  jobs.py  layoffs.py
eval/: harness.py
infra/: .env.example  docker-compose.yml  smoke_test.ps1
infra/cal_fixtures/: README.md
llm/: __init__.py  core.py  prompts.py
probes/: failure_taxonomy.md  probe_library.md
reports/: evidence_graph.json  langfuse_trace.jsonl  memo.md
services/: __init__.py  cal_service.py  email_service.py  hubspot_service.py  tool_result.py  traced_tools.py
