# pyproject.toml

[project]
name = "conversion_engine_backend"
version = "0.1.0"
description = "An Automated Lead Generation and Conversion System for Tenacious Consulting and Outsourcing." 
requires-python = "==3.12.3"
dependencies = [
    "africastalking>=2.0.2",
    "aiohttp>=3.13.5",
    "black>=26.3.1",
    "cryptography>=46.0.7",
    "fastapi>=0.136.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "hubspot-api-client>=12.0.0",
    "isort>=8.0.1",
    "jsonschema>=4.26.0",
    "langfuse>=4.5.0",
    "matplotlib>=3.10.8",
    "mypy>=1.20.2",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "resend>=2.29.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tenacity>=9.1.4",
    "uvicorn>=0.45.0",
]


[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
skip = [".venv"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503", "E402"]
exclude = [".venv", "venv", "env"]

[tool.yamllint]
extends = "default"

[tool.yamllint.rules.truthy]
level = "warning"
allowed-values = ["true", "false"]

[tool.poetry]
name = "conversion_engine_backend"
version = "0.1.0"
description = "Webhook backend for Conversion Engine"
authors = ["Nuhamin"]

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.136.0"
uvicorn = "^0.45.0"
python-multipart = "^0.0.26"
resend = "^2.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

